device assignments